name:                hs-certificate-transparency
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             Apache-2.0
license-file:        LICENSE
-- author:              
maintainer:          tom@tom-fitzhenry.me.uk
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable hs-certificate-transparency
  main-is:             Network/CertificateTransparency/Main.hs
  -- other-modules:       
  GHC-Options:         -Wall
  build-depends:       base >= 4.5 && < 4.7
                     , aeson == 0.6.*
                     , base64-bytestring == 1.0.*
                     , bytestring == 0.9.*
                     , cryptohash == 0.10.*
                     , hslogger == 1.2.*
                     , http-conduit == 1.9.*
                     , http-types == 0.8.*
                     , monad-loops == 0.4.*
                     , text == 0.11.*

test-suite tests
    type:           exitcode-stdio-1.0
    hs-source-dirs: Tests, .
    main-is:        Tests.hs
    build-depends:  HUnit
                  , QuickCheck
                  , test-framework
                  , test-framework-hunit
                  , test-framework-quickcheck2
                  , base >= 4.5 && < 4.7
                  , aeson == 0.6.*
                  , base64-bytestring == 1.0.*
                  , bytestring == 0.9.*
                  , cryptohash == 0.10.*
                  , http-conduit == 1.9.*
                  , http-types == 0.8.*
                  , text == 0.11.*
