name:                hs-certificate-transparency
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             Apache-2.0
license-file:        LICENSE
-- author:              
maintainer:          tom@tom-fitzhenry.me.uk
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable hs-certificate-transparency
  main-is:             Network/CertificateTransparency/Main.hs
  -- other-modules:       
  GHC-Options:         -Wall -Werror -fno-warn-type-defaults -fno-warn-deprecations
  build-depends:       base == 4.8.*
                     , aeson == 0.9.*
                     , asn1-encoding == 0.9.*
                     , asn1-types == 0.3.*
                     , async == 2.0.*
                     , base64-bytestring == 1.0.*
                     , binary == 0.7.*
                     , bytestring == 0.10.*
                     , cryptohash == 0.11.*
                     , hslogger == 1.2.*
                     , http-conduit == 2.1.*
                     , http-types == 0.8.*
                     , monad-loops == 0.4.*
                     , network-uri == 2.6.*
                     , postgresql-simple == 0.4.*
                     , text == 1.2.*
                     , tls >= 1.3.3
                     , x509 == 1.6.*

test-suite tests
    type:           exitcode-stdio-1.0
    hs-source-dirs: ., Tests
    main-is:        Tests.hs
    build-depends:  tasty == 0.10.*
                  , tasty-hunit == 0.9.*
                  , tasty-th == 0.1.*
                  , HUnit == 1.2.*
                  , tasty-quickcheck == 0.8.*
                  , base == 4.8.*
                  , aeson == 0.9.*
                  , base64-bytestring == 1.0.*
                  , bytestring == 0.10.*
                  , cryptohash == 0.11.*
                  , hslogger == 1.2.*
                  , http-conduit == 2.1.*
                  , http-types == 0.8.*
                  , network-uri == 2.6.*
                  , text == 1.2.*
                  , x509 == 1.6.*
